--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+either = "1.15.0"
 num = "0.4.1"
 num-derive = "0.4.1"
 num-traits = "0.2"
